--- a/SEMANA_02/04_AUT_EST_EX_OBRIGATORIOS/curriculo-html-css-js/public/estilo.css
+++ b/SEMANA_02/04_AUT_EST_EX_OBRIGATORIOS/curriculo-html-css-js/public/estilo.css
@@ -2,13 +2,19 @@ body {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
-img{
-  border-radius: 100%
+#fotoperfil {
+  border-radius: 100%;
+  display:flex;
+  margin:auto;
 }
 
 h1{
   background-color: rgb(255, 214, 80);
   text-align: right;
+}
+
+h2{
+  text-align: center;
 }
 
 h3 {
